--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,7 +66,7 @@ pre:has(div.codeblock) {
   padding: 0px;
 }
 
-#map-page-container * :not(header) {
+#map-page-container * :not(header, img) {
   border-radius: 10px;
 }
 
