--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -124,3 +124,11 @@
     flex-direction: column;
     height: 50%;
 }
+
+/* .esri-ui-inner-container {
+    display: none;
+} */
+
+.esri-popup--aligned-top-center, .esri-popup--aligned-top-left, .esri-popup--aligned-top-right{
+    display: none!important;
+}
