--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -190,3 +190,99 @@ th, td{
     font-size: 1rem;
     color: white;
 }
+
+.flex-column{
+    display: flex;
+    flex-direction: column;
+}
+
+.p-inputtext{
+    border-width: 1px;
+    padding:  5px;
+    padding-left: 10px;
+}
+
+.kb-file-upload {
+  margin-top: 10px;
+}
+.file-upload-box {
+  border: 1px dashed #b6bed1;
+  border-radius: 4px;
+  position: relative;
+  overflow: hidden;
+  padding: 8px;
+  align-items: center;
+  justify-content: center;
+  /* color: #1a1b1c; */
+  color: white;
+  font-weight: 400;
+  font-size: 15px;
+  text-align: center;
+}
+.file-upload-box .file-upload-input {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  cursor: pointer;
+}
+.file-link{
+  font-weight: 500;
+  text-decoration: underline;
+}
+.file-upload-box .file-link:hover{
+  text-decoration: none;
+}
+.file-atc-box {
+  margin-top: 15px;
+}
+.file-detail{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* color: #1a1b1c; */
+  color: white;
+  font-weight: 400;
+  /* margin-bottom: 3px; */
+}
+.deleteFile{
+  font-size: 20px;
+  cursor: pointer;
+}
+.progress-bar {
+  height: 8px;
+  width: 100%;
+  background: #dae2f2;
+  border-radius: 4px;
+}
+.progress-bar-fill {
+  width: 100%;
+  height: 8px;
+  background: #1861f2;
+}
+
+.p-button {
+  margin: 0;
+  display: inline-flex;
+  cursor: pointer;
+  user-select: none;
+  align-items: center;
+  vertical-align: bottom;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+  color: #ffffff;
+  background: #1861f2;
+  border: 1px solid #1861f2;
+  padding: 0.75rem 1.25rem;
+  font-size: 1rem;
+  transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
+  border-radius: 6px;
+}
+
+.p-dialog-header, .p-dialog-content{
+    background: #00211D!important;
+    color: white;
+}
